2002-03-14 Alexander Rawass <alexannika@users.sourceforge.net>

	* very basic force feedback support
	  - added files src/force_feedback.cpp/h
	  - modified src/Makefile.am
	  - config vars: joystick/force_feedback, joystick/ff_device
	  - to compile use -DHAVE_FORCE_FEEDBACK

	
2002-03-12 Daniel Horn <hellcatv@hotmail.com>
	* Added option for swithcing cockpits when units change
	* Added option for AI to not pilot ship you turret
	* Fixed UnitContainer bug in player_unit
	* Fixed up missiels to deal damage in the list and self destruct
	
2002-03-10 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* Interpreter:
	  - faster lookup for other callback modules
	

2002-03-10 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* Interpreter:
	  - faster callback module lookup
	  - faster lookup of callback module std (others will follow)


2002-03-09 Daniel Horn <hellcatv@hotmail.com>
	* Fixed disappearing first unit bug with low quality sprites
	* Fixed cockpit cycle complaint
	* Added Gauntlet mission (if you kill 3 guys, 3 more come)
	* Added XvX missions using the nvn module
	* Fixed [ key to cycle through all allies
	* Fixed save directory to be .vegastrike in windows

2002-03-09 Alexander Rawass <alexannika@users.sourceforge.net>

	* director:
	  ai_orderlist now remembers order when re-launched
	* added findOrderList to Order
	* replaced messy vegastrike.config with older version


2002-03-09 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* fixed crosshairs in firefly/hornet cockpit
	* interpreter:
	  - deleting class instances correctly
	  - faster variable lookup (not working yet)
	  - better fatal error output (stackdump)
	* modified Order::~Order()
	  the suborders get now deleted correctly


2002-03-08 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* ai_orderlist now faster
	* added scanSystem() to Unit class

	
2002-03-07 Daniel Horn <hellcatv@hotmail.com>
	* also had to add gui to src/Makefile.am...strange